fixing layout and put overflowY = auto for small devices in toolbar-smp

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ main {
   margin-left: var(--margin-left);
   display: grid;
   background-color: var(--bg-primary);
+  overflow: hidden;
 }
 
 .toolbar-smp div.row {
@@ -63,15 +64,18 @@ main {
 }
 
 
-#section-my-stave::-webkit-scrollbar {
+#section-my-stave::-webkit-scrollbar,
+.toolbar-smp::-webkit-scrollbar {
   width: 0.25rem;
   /* height: 0.25rem; */
   height: 0rem;
 }
-#section-my-stave::-webkit-scrollbar-track {
+#section-my-stave::-webkit-scrollbar-track,
+.toolbar-smp::-webkit-scrollbar-track {
   background: var(--scrollbar-track);
 }
-#section-my-stave::-webkit-scrollbar-thumb {
+#section-my-stave::-webkit-scrollbar-thumb,
+.toolbar-smp::-webkit-scrollbar-thumb {
   background: var(--scrollbar-thumb);
 }
 .table thead th, .table tbody tr th, .table tbody tr td{
@@ -184,7 +188,7 @@ tbody tr td {
 }
 
 /* Large screens */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 576px) {
     .navbar-smp {
       top: 0;
       left: 0;
@@ -199,13 +203,10 @@ tbody tr td {
     
     .toolbar-smp {
       margin-left: var(--margin-left);
-      overflow: scroll;
-      /* padding: 12px; */
     }
     .toolbar-smp-child {
       display: flex;
       justify-content: center;
-      overflow: auto!important;
     }
     .navbar-smp:hover {
       width: 16rem;
@@ -218,7 +219,7 @@ tbody tr td {
 
 }
 /* Small screens */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 576px) {
   .navbar-smp {
     left: 0;
     bottom: 0;
@@ -244,7 +245,7 @@ tbody tr td {
 
   .toolbar-smp {
     margin-left: 0;
-    /* padding: 4px; */
+    overflow-y: auto;
   }
     
   .col-1 {
